# mneomonics

./: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: app.html  input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  main.rs
src/routes/: +layout.ts  +page.svelte  +page.ts
src/routes/login/: +page.svelte
src/routes/main/: +page.svelte  +page.ts
src/routes/main/collection/[id]/: +page.svelte  +page.ts
src/ts/: types.ts
