[package]
name = "mneomonics"
version = "0.1.0"
description = "A flash cards like software inspired by Anki."
authors = ["rakRandom"]
edition = "2021"
repository = "https://github.com/rakRandom/mneomonics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-rc"
firebase-rs = "2.1.2"
reqwest = { version = "0.12.7", features = ["json"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
